# lab07

./: .gitmodules  CMakeLists.txt
include/: facrotial.h  factorial.h  header.hpp
sources/: factorial.cpp
tests/: test.cpp
tools/_logs/polly/default/: log-0.txt  log.txt
